'Added web of relationships' experiment

--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "copy": "cp .htaccess dist/",
-    "deploy": "npm run build && npm run copy && node deploy"    
+    "deploy": "npm run build && npm run copy && node deploy"
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "vis-network": "^9.1.0",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0"
